--- a/microservices/data_collector/Dockerfile
+++ b/microservices/data_collector/Dockerfile
@@ -5,12 +5,11 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the entire 'app' directory contents into the container
 COPY ./app .
 
+# Compila il file proto in codice Python
+RUN python -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. service.proto
 
-# Expose the port the Flask app will run on
 EXPOSE 5000
 
-# Run the flask server and make it accessible from outside the container
 CMD ["python", "app.py"]
