--- a/kubernetes/alert-notifier-system-deployment.yaml
+++ b/kubernetes/alert-notifier-system-deployment.yaml
@@ -13,6 +13,10 @@ spec:
     metadata:
       labels:
         app: alert-notifier-system
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "5000"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
         - name: alert-notifier-system
@@ -39,6 +43,9 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+          ports:
+            - containerPort: 5000
+              name: metrics
           resources:
             requests:
               memory: "64Mi"
@@ -46,3 +53,31 @@ spec:
             limits:
               memory: "128Mi"
               cpu: "250m"
+          livenessProbe:
+            httpGet:
+              path: /ping
+              port: 5000
+            initialDelaySeconds: 15
+            periodSeconds: 20
+            timeoutSeconds: 5
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /ping
+              port: 5000
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 3
+            failureThreshold: 3
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: alert-notifier-system
+spec:
+  selector:
+    app: alert-notifier-system
+  ports:
+    - name: http
+      port: 5000
+      targetPort: 5000
