--- a/kubernetes/prometheus-config.yaml
+++ b/kubernetes/prometheus-config.yaml
@@ -30,6 +30,38 @@ data:
           - source_labels: [__meta_kubernetes_node_name]
             target_label: node
 
+      - job_name: 'alert-system'
+        kubernetes_sd_configs:
+          - role: pod
+        metrics_path: /metrics
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_pod_label_app]
+            action: keep
+            regex: alert-system
+          - source_labels: [__meta_kubernetes_pod_ip]
+            action: replace
+            target_label: __address__
+            regex: (.+)
+            replacement: ${1}:5000
+          - source_labels: [__meta_kubernetes_node_name]
+            target_label: node
+
+      - job_name: 'alert-notifier-system'
+        kubernetes_sd_configs:
+          - role: pod
+        metrics_path: /metrics
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_pod_label_app]
+            action: keep
+            regex: alert-notifier-system
+          - source_labels: [__meta_kubernetes_pod_ip]
+            action: replace
+            target_label: __address__
+            regex: (.+)
+            replacement: ${1}:5000
+          - source_labels: [__meta_kubernetes_node_name]
+            target_label: node
+
       - job_name: 'data-collector'
         kubernetes_sd_configs:
           - role: pod
