--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ venv/
 .env
 nginx/ssl/nginx-selfsigned.crt
 nginx/ssl/nginx-selfsigned.key
-nginx/ssl/nginx-selfsigned.keykubernetes/secrets.yaml
+kubernetes/secrets.yaml
