--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -73,7 +73,7 @@ services:
       KAFKA_ADVERTISED_HOST_NAME: kafka
       KAFKA_ADVERTISED_PORT: 9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "to-alert-system:1:1,to-notifier:1:1"
+      KAFKA_CREATE_TOPICS: "to-alert-system:1:1,to-notifier:1:1,sla_breach:1:1"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
@@ -93,6 +93,24 @@ services:
     depends_on:
       - kafka
       - user-db
+
+  sla-breach-detector:
+    build: ./microservices/sla_breach_detector
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - PROMETHEUS_URL=http://prometheus:9090
+    depends_on:
+      - kafka
+      - prometheus
+
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./kubernetes/prometheus-config.yaml:/etc/prometheus/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
 
 volumes:
   user_db_data:
