--- a/kubernetes/prometheus-config.yaml
+++ b/kubernetes/prometheus-config.yaml
@@ -77,3 +77,19 @@ data:
             replacement: ${1}:5000
           - source_labels: [__meta_kubernetes_node_name]
             target_label: node
+
+      - job_name: 'sla-breach-detector'
+        kubernetes_sd_configs:
+          - role: pod
+        metrics_path: /metrics
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_pod_label_app]
+            action: keep
+            regex: sla-breach-detector
+          - source_labels: [__meta_kubernetes_pod_ip]
+            action: replace
+            target_label: __address__
+            regex: (.+)
+            replacement: ${1}:5000
+          - source_labels: [__meta_kubernetes_node_name]
+            target_label: node
