feat: update ingress.yaml with sla-breach-detector

--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -24,3 +24,10 @@ spec:
                 name: data-collector
                 port:
                   number: 5000
+          - path: /sla-detector(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: sla-breach-detector
+                port:
+                  number: 5000
