--- a/kubernetes/infrastructure-deployment.yaml
+++ b/kubernetes/infrastructure-deployment.yaml
@@ -60,7 +60,7 @@ spec:
             - name: KAFKA_ZOOKEEPER_CONNECT
               value: "zookeeper:2181"
             - name: KAFKA_CREATE_TOPICS
-              value: "to-alert-system:1:1,to-notifier:1:1"
+              value: "to-alert-system:1:1,to-notifier:1:1,sla_breach:1:1"
             # Override Kubernetes service discovery variable to prevent conflict
             - name: KAFKA_PORT
               value: ""
